<resources>
    <string name="app_name">Vinyls_Jetpack_Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="collector_icon_text">Collector Icon</string>
    <string name="icon_description_artists">Icon representing Artists</string>
    <string name="icon_description_albums">Icon representing Albums</string>
    <string name="icon_description_collectors">Icon representing Collectors</string>

    <string name="label_artists">Artists</string>
    <string name="label_albums">Albums</string>
    <string name="label_collectors">Collectors</string>

    <string name="icon_description_home">Icon representing Home</string>
    <string name="icon_description_search">Icon representing Search</string>

    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="add_new_album">Agregar nuevo álbum</string>
    <string name="banner_text">Banner Vinilos</string>
    <string name="user_icon_description">Icono de usuario</string>
    <string name="fab_add_album_description">Agregar nuevo álbum</string>
    <string name="central_image_description">Imagen central de un vinilo</string>
    <string name="acerca_de_app_text">Acerca de la app</string>
    <string name="performer_image_description">Imagen del artista</string>
    <string name="view_button_text">Ver</string>
    <string name="album_name">Nombre del Álbum</string>
    <string name="album_cover_url">URL de la Portada</string>
    <string name="album_release_date">Fecha de Lanzamiento</string>
    <string name="album_description">Descripción</string>
    <string name="album_genre">Género</string>
    <string name="album_record_label">Sello Discográfico</string>
    <string name="cancel">Cancelar</string>
    <string name="album_save">Guardar Álbum</string>
    <string name="add_album_title">Agregar Álbum</string>
    <string name="add_track_title">Agregar Track</string>
    <string name="track_name">Nombre del Track</string>
    <string name="track_duration">Duración del Track</string>
    <string name="save_track">Guardar Track</string>
    <string name="email_label">Email:</string>
    <string name="telephone_label">Telephone:</string>
    <string name="comments_label">Comments:</string>
    <string name="favorite_performers_label">Favorite Performers:</string>

    <!-- Títulos -->
    <string name="add_album_screen">Pantalla para agregar álbum</string>
    <string name="add_track_title_description">Título del formulario para agregar una nueva pista al álbum</string>

    <!-- Descripciones de los campos -->
    <string name="album_name_description">Campo para ingresar el nombre del álbum</string>
    <string name="album_cover_description">Campo para ingresar la URL de la portada del álbum</string>
    <string name="album_release_date_description">Campo para ingresar la fecha de lanzamiento del álbum</string>
    <string name="album_genre_description">Menú desplegable para seleccionar el género del álbum</string>
    <string name="album_record_label_description">Menú desplegable para seleccionar la casa discográfica del álbum</string>
    <string name="layout_description">Formulario para agregar una nueva pista de álbum</string>
    <string name="track_name_description">Campo para ingresar el nombre de la pista</string>
    <string name="track_duration_description">Campo para ingresar la duración de la pista</string>
    <string name="album_release_date_hint">Ingrese fecha de lanzamiento (YYYY-MM-DD)</string>

    <string name="cancel_track_description">Botón para cancelar la adición de una nueva pista</string>
    <string name="save_track_description">Botón para guardar la nueva pista</string>

    <!-- Descripción de botones -->
    <string name="cancel_button">Botón para cancelar la operación</string>
    <string name="save_button">Botón para guardar el álbum</string>

</resources>