<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/add_album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_album_title" />

        <EditText
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_name" />

        <EditText
            android:id="@+id/albumCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_cover_url" />

        <EditText
            android:id="@+id/albumReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_release_date" />

        <EditText
            android:id="@+id/albumDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_description" />

        <Spinner
            android:id="@+id/albumGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_genre" />

        <Spinner
            android:id="@+id/albumRecordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_record_label" />

        <Button
            android:id="@+id/cancelAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/saveAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_save"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>