<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/add_track_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_track_title" />

        <EditText
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/track_name" />

        <EditText
            android:id="@+id/trackDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/track_duration" />

        <Button
            android:id="@+id/cancelTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/saveTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_track"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>