<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="collector"
            type="com.example.vinilos_app.models.CollectorDetail" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:dividerPadding="8dp"
            android:showDividers="middle">

            <!-- Información Principal -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/album_cover"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/collector_icon_text"
                        android:scaleType="centerCrop"
                        android:src="@drawable/collector_icon"
                        android:layout_marginBottom="16dp" />

                    <TextView
                        android:id="@+id/collector_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{collector.name}"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/primary_text_color"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_label"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/secondary_text_color" />
                    <TextView
                        android:id="@+id/collector_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{collector.email}"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone_label"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:textColor="@color/secondary_text_color" />
                    <TextView
                        android:id="@+id/collector_telephone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{collector.telephone}"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_color" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Comentarios -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comments_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text_color"
                        android:paddingBottom="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{collector.comments[0].description}"
                            android:textSize="14sp"
                            android:textColor="@color/primary_text_color" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{collector.comments.isEmpty() ? `` : String.format(`Rating: %s`, collector.comments[0].rating)}"
                            android:textSize="14sp"
                            android:textColor="@color/secondary_text_color" />

                        <!-- RecyclerView para más comentarios -->
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Artistas Favoritos -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="12dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite_performers_label"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/secondary_text_color"
                        android:paddingBottom="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{collector.favoritePerformers[0].name}"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/primary_text_color" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{collector.favoritePerformers[0].description}"
                            android:textSize="14sp"
                            android:textColor="@color/secondary_text_color" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{collector.favoritePerformers[0].birthDate}"
                            android:textSize="14sp"
                            android:textColor="@color/secondary_text_color" />

                        <!-- RecyclerView para más artistas -->
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
